added d10 to core_version_requirement

--- a/yse_style_options_extras.info.yml
+++ b/yse_style_options_extras.info.yml
@@ -4,3 +4,4 @@ description: Adding our own plugin to the style_options paragraph behavior modul
 core_version_requirement: ^9 || ^10
 dependencies:
   - style_options:style_options
+version: v1.2.0
